--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ cities_and_areas_names/index.faiss
 cities_and_areas_names/index.pkl
 vector_stores/cities_and_areas_names/index.faiss
 vector_stores/cities_and_areas_names/index.pkl
+.env
